--- a/changelog.html
+++ b/changelog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="3.-4. červen 2023 - Gabriel Loci, Praha - První ročník komunitní konference o blockchainu a kryptoměnách." />
+		<meta name="description" content="3.-4. červen 2023 - Gabriel Loci, Praha - Druhý ročník komunitní konference o blockchainu a kryptoměnách." />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@utxoprague" />
     <meta name="twitter:title" content="UTXO.23 | 3.-4. červen 2023, 🇨🇿 Praha" />
@@ -145,7 +145,7 @@
 				env: {},
 				paths: {"assets":"","base":""},
 				target: document.querySelector('[data-sveltekit-hydrate="y62kqn"]').parentNode,
-				version: "1683738160726",
+				version: "1683805390150",
 				hydrate: {
 					node_ids: [0, 3],
 					data: [null,null],
